tests/NormalTests/paczka1/fuzzy1/37076534.err
Error in line 3: 1pmYLr A340 80,9
Error in line 9: DY2kUaz52J S873 52,9
Error in line 18: XHLBS S9&3 46,5
Error in line 11: 1pmYLr S913 79,8
Error in line 19: 1pmYLr A340 60,9
Error in line 22: 1pmYLr S873 92,20
Error in line 20: 1pmYLr S873 69,7
Error in line 31: S873 S913 18,9
Error in line 34: DY2kUaz52J S873 56,7
Error in line 21: XHLBS S913 165,5
